# Deterministic-Rules-Engine-AI

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: pages.yml  tests.yml
Constraint/: facts.json  result.json  rules.json  run.sh
DecisionTable/: facts.json  result.json  rules.json  run.sh
DecisionTableUI/: run-ui.sh
DecisionTree/: facts.json  result.json  rules.json  run.sh
ECA/: facts.json  result.json  rules.json  run.sh
Flow/: facts.json  result.json  rules.json  run.sh
Scorecard/: facts.json  result.json  rules.json  run.sh
Validation/: facts.json  result.json  rules.json  run.sh
docs/: build-wasm.sh  index.html  run-ui.sh
docs/pkg/: wasm_engine.d.ts  wasm_engine.js  wasm_engine_bg.wasm  wasm_engine_bg.wasm.d.ts
ifThen/: facts.json  result.json  rules.json  run.sh
scripts/: test-harness.sh
src/: main.rs
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
