[package]
name = "rules-cli"
version = "0.1.0"
edition = "2021"
description = "CLI rule engine with Excel-backed rules"
license = "MIT"

[dependencies]
anyhow = "1.0"
calamine = "0.26"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
